# jirehs-ai-writing-detector

./: .gitignore  README.md
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  integration-test-instructions.md  unit-test-instructions.md
aidlc-docs/construction/plans/: frontend-redesign-code-generation-plan.md  iteration-2-code-generation-plan.md  unit-1-backend-foundation-code-generation-plan.md  unit-2-pattern-detectors-code-generation-plan.md  unit-3-analyzers-scoring-code-generation-plan.md  unit-4-frontend-code-generation-plan.md  unit-5-integration-docker-code-generation-plan.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  preprocessing.py
backend/app/analyzers/: linguistic.py  readability.py
backend/app/api/: routes.py
backend/app/core/: config.py  models.py
backend/app/detectors/: base.py  emphasis.py  registry.py  structural.py  vague_language.py  vocabulary.py
backend/app/report/: builder.py
backend/app/scoring/: aggregator.py
backend/config/: detectors.yaml
backend/tests/: conftest.py  test_aggregator.py  test_api.py  test_config.py  test_emphasis.py  test_linguistic.py  test_preprocessing.py  test_readability.py  test_registry.py  test_report.py  test_structural.py  test_vague_language.py  test_vocabulary.py
backend/tests/corpus/: ai_essay_01.txt  ai_essay_02.txt  human_essay_01.txt  human_essay_02.txt
docs/: spec.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json
frontend/src/: App.tsx  index.css
(+39 files in other folders)
